@@ -1160,10 +1160,11 @@ def add_mainframe_menu(menulist):
     ])
 Mixin.setPlugin('mainframe', 'add_menu', add_mainframe_menu)
 
-def setEOLMode(win, mode):
+def setEOLMode(win, mode, convert=True):
     win.lineendingsaremixed = False
     win.eolmode = mode
-    win.ConvertEOLs(win.eols[mode])
+    if convert:
+        win.ConvertEOLs(win.eols[mode])
     win.SetEOLMode(win.eols[mode])
     win.mainframe.SetStatusText(win.eolstr[mode], 3)
 
@@ -1179,44 +1180,59 @@ def OnDocumentEolConvertMac(win, event):
     setEOLMode(win.document, 2)
 Mixin.setMixin('mainframe', 'OnDocumentEolConvertMac', OnDocumentEolConvertMac)
 
-def fileopentext(win, stext):
-    text = stext[0]
-
-    win.lineendingsaremixed = False
+def check_mixed(text):
+    lineendingsaremixed = False
 
     eollist = "".join(map(getEndOfLineCharacter, text))
 
     len_win = eollist.count('\r\n')
     len_unix = eollist.count('\n')
     len_mac = eollist.count('\r')
+    eolmode = -1
     if len_mac > 0 and len_unix == 0:
-        win.eolmode = 2
+        eolmode = 2
     elif len_win == len_unix == len_mac:
-        win.eolmode = 1
+        eolmode = 1
     elif len_unix > 0 and len_win == 0 and len_mac == 0:
-        win.eolmode = 0
+        eolmode = 0
     else:
-        win.lineendingsaremixed = True
+        lineendingsaremixed = True
+
+    return eolmode, lineendingsaremixed
+
+def fileopentext(win, stext):
+    text = stext[0]
+    win.eolmode, win.lineendingsaremixed = check_mixed(text)
 Mixin.setPlugin('editor', 'openfiletext', fileopentext)
 
-def openfiletext(win, text):
-    def f():
-        if win.lineendingsaremixed:
-            eolmodestr = "MIX"
-            d = wx.MessageDialog(win,
-                tr('%s is currently Mixed.\nWould you like to change it to the default?\nThe Default is: %s')
-                % (win.filename, win.eolmess[win.pref.default_eol_mode]),
-                tr("Mixed Line Ending"), wx.YES_NO | wx.ICON_QUESTION)
-            if d.ShowModal() == wx.ID_YES:
-                setEOLMode(win, win.pref.default_eol_mode)
-    #            win.savefile(win.filename, win.locale)
-        if win.lineendingsaremixed == False:
-            eolmodestr = win.eolstr[win.eolmode]
-        win.mainframe.SetStatusText(eolmodestr, 3)
-        setEOLMode(win, win.eolmode)
-    f()
-Mixin.setPlugin('editor', 'openfiletext', openfiletext)
+def confirm_eol(win):
+    eolmodestr = "MIX"
+    d = wx.MessageDialog(win,
+        tr('%s is currently Mixed.\nWould you like to change it to the default?\nThe Default is: %s')
+        % (win.filename, win.eolmess[win.pref.default_eol_mode]),
+        tr("Mixed Line Ending"), wx.YES_NO | wx.ICON_QUESTION)
+    if d.ShowModal() == wx.ID_YES:
+        setEOLMode(win, win.pref.default_eol_mode)
+        return True
+    else:
+        return False
 
+def afteropenfile(win, filename):
+    if win.lineendingsaremixed:
+        confirm_eol(win)
+    else:
+        eolmodestr = win.eolstr[win.eolmode]
+        win.mainframe.SetStatusText(eolmodestr, 3)
+        setEOLMode(win, win.eolmode, convert=False)
+Mixin.setPlugin('editor', 'afteropenfile', afteropenfile)
+
+
+def savefile(win, filename):
+    text = win.GetText()
+    win.eolmode, win.lineendingsaremixed = check_mixed(text)
+    if win.lineendingsaremixed:
+        confirm_eol(win)
+Mixin.setPlugin('editor', 'savefile', savefile)
 
 def on_document_enter(win, document):
     if document.edittype == 'edit':
